test/pass/optargs/optarg_satisfy_smaller.lily
define f(a: Integer, b: *Integer=10) {  }

define g(a: Function(Integer)) {  }

g(f)
