test/fail/basic_syntax/function_arg_redecl.lily
#[
SyntaxError: a has already been declared.
    from function_arg_redecl.lily:6:
]#

define f(a: Integer, a: Integer) {}
